--- a/app/src/main/res/layout/item_filter.xml
+++ b/app/src/main/res/layout/item_filter.xml
@@ -20,7 +20,10 @@
             android:layout_height="wrap_content"
             android:id="@+id/filter_text"
             android:textSize="12dp"
-            android:padding="10dp"
+           android:paddingStart="12dp"
+            android:paddingTop="3dp"
+            android:paddingBottom="3dp"
+            android:paddingEnd="12dp"
             android:text="All"
             />
     </LinearLayout>
