--- a/app/src/main/res/layout/wakeup_dialog_fragment.xml
+++ b/app/src/main/res/layout/wakeup_dialog_fragment.xml
@@ -103,7 +103,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/lyt_default_target"
-        android:visibility="gone"
+        android:visibility="visible"
         android:layout_marginTop="15dp"
         android:orientation="horizontal"
         android:gravity="center"
@@ -124,12 +124,17 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
 
-        <ImageView
+        <com.google.android.material.checkbox.MaterialCheckBox
+            android:id="@+id/checkbox_item"
             android:layout_width="24dp"
             android:layout_height="24dp"
             android:layout_marginStart="10dp"
-            android:src="@drawable/green_square_check"
-            android:id="@+id/img_green_check"
+            android:button="@null"
+            android:background="@drawable/checkbox_background"
+            android:checkMark="@drawable/ic_check_white"
+            app:buttonTint="@null"
+            android:minWidth="0dp"
+            android:minHeight="0dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
     </androidx.appcompat.widget.LinearLayoutCompat>
