--- a/app/src/main/res/layout/row_reasons_delete.xml
+++ b/app/src/main/res/layout/row_reasons_delete.xml
@@ -20,6 +20,7 @@
             android:layout_height="wrap_content"
             android:focusable="false"
             android:focusableInTouchMode="false"
+            app:buttonTint="@color/checkbox_color"
             android:clickable="false" />
 
         <TextView
