--- a/app/src/main/res/layout/activity_breathwork_practice.xml
+++ b/app/src/main/res/layout/activity_breathwork_practice.xml
@@ -57,44 +57,6 @@
         android:visibility="gone"
         android:layout_below="@+id/toolbar"
         android:background="@color/white">
-        <!-- Back Button -->
-     <!--   <ImageButton
-            android:id="@+id/backButton"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:background="?attr/selectableItemBackgroundBorderless"
-            android:src="@drawable/icon_back"
-            android:layout_alignParentStart="true"
-            android:layout_marginTop="16dp"
-            android:layout_marginStart="1dp" />-->
-
-        <!-- Set Indicator and Timer -->
-        <!--<LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="16dp">
-
-            <TextView
-                android:id="@+id/setIndicator"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Set 1/3"
-                android:textSize="18sp"
-                android:textStyle="bold"
-                android:textColor="@color/black" />
-
-            <TextView
-                android:id="@+id/sessionTimer"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="02:15"
-                android:layout_gravity="center_horizontal"
-                android:textSize="14sp"
-                android:textColor="@color/black" />
-
-        </LinearLayout>-->
 
         <!-- Plus Button -->
         <ImageButton
@@ -206,7 +168,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:id="@+id/rl_practice_complete"
-        android:visibility="gone"
+        android:visibility="visible"
         android:layout_height="match_parent">
 
         <LinearLayout
