--- a/app/src/main/res/layout/activity_delete_account_email_data.xml
+++ b/app/src/main/res/layout/activity_delete_account_email_data.xml
@@ -25,7 +25,7 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:text="Delete Account"
-            android:fontFamily="@font/dmsans_bold"
+            android:fontFamily="@font/merriweather_bold"
             android:textSize="18sp"
             android:textColor="@color/txt_color_mind"
             android:layout_weight="1"
@@ -49,10 +49,10 @@
             android:background="@color/white"
             android:gravity="start"
             android:padding="16dp"
-            android:textSize="14sp"
+            android:textSize="16sp"
             android:fontFamily="@font/dmsans_regular"
             android:textColor="@color/txt_color_mind"
-            android:text="It is advisable to you to request your data to be sent to your email." />
+            android:text="We recommend you to request your data to be sent to your email as backup." />
 
     </androidx.cardview.widget.CardView>
 
@@ -70,6 +70,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:focusable="false"
+            android:scaleX="1.5"
+            android:scaleY="1.5"
+            app:buttonTint="@color/checkbox_color"
             android:focusableInTouchMode="false"/>
 
         <TextView
