Following issues resolved RAD-5248Done RAD-5238 RAD-5237 RAD-5235 RAD-5234 RAD-5233 RAD-5232 RAD-5221 RAD-5220 RAD-5217 RAD-5216 RAD-5215 RAD-5214 RAD-5222 RAD-5153 - Done RAD-5137 Done RAD-5142 done RAD-5156 Done
RAD-5208 Done
RAD-5162  Done
RAD-5172 Done
RAD-5236
RAD-5166

--- a/app/src/main/res/layout/activity_breathwork_practice.xml
+++ b/app/src/main/res/layout/activity_breathwork_practice.xml
@@ -168,7 +168,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:id="@+id/rl_practice_complete"
-        android:visibility="visible"
+        android:visibility="gone"
         android:layout_height="match_parent">
 
         <LinearLayout
