--- a/app/src/main/res/layout/activity_red_flag_alert.xml
+++ b/app/src/main/res/layout/activity_red_flag_alert.xml
@@ -35,6 +35,7 @@
         android:layout_height="match_parent"
         android:layout_below="@id/llTopBar"
         android:layout_above="@id/btnImFine"
+        android:paddingHorizontal="5dp"
         android:layout_marginVertical="8dp">
 
         <LinearLayout
