--- a/app/src/main/res/layout/dialog_pratice_time_affirmation.xml
+++ b/app/src/main/res/layout/dialog_pratice_time_affirmation.xml
@@ -128,10 +128,10 @@
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="16dp"
-            android:fontFamily="@font/dmsans_bold"
+            android:fontFamily="@font/merriweather_bold"
             android:text="Great Work!"
             android:textColor="@color/txt_color_header"
-            android:textSize="20sp" />
+            android:textSize="@dimen/textsize_large24sp" />
 
         <TextView
             android:id="@+id/subText"
@@ -152,7 +152,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
             android:layout_marginEnd="10dp"
-            android:src="@drawable/close_dialog_affirmation" />
+            android:src="@drawable/close_breathwork" />
 
         <View
             android:id="@+id/view_horizontal_line"
