--- a/app/src/main/res/layout/row_affirmation_card.xml
+++ b/app/src/main/res/layout/row_affirmation_card.xml
@@ -5,7 +5,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_gravity="center"
-
+    android:clipToPadding="true"
+    android:clipChildren="true"
+    app:cardElevation="8dp"
     app:cardCornerRadius="30dp"
     app:cardUseCompatPadding="true">
 
