--- a/app/src/main/res/layout/row_helpline.xml
+++ b/app/src/main/res/layout/row_helpline.xml
@@ -58,8 +58,8 @@
             android:layout_marginHorizontal="8dp" />
 
         <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
             android:layout_alignParentEnd="true"
             android:src="@drawable/ic_phone"
             android:layout_marginHorizontal="8dp" />
@@ -71,7 +71,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/rlPhoneNumber1"
-        android:layout_marginTop="2dp">
+        android:layout_marginTop="4dp">
 
         <TextView
             android:id="@+id/tvPhoneNumber2"
@@ -86,8 +86,8 @@
             android:layout_marginHorizontal="8dp" />
 
         <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
             android:layout_alignParentEnd="true"
             android:src="@drawable/ic_phone"
             android:layout_marginHorizontal="8dp" />
