--- a/app/src/main/res/layout/item_dish_search_ai.xml
+++ b/app/src/main/res/layout/item_dish_search_ai.xml
@@ -3,7 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:padding="10dp"
+    android:paddingTop="10dp"
+    android:paddingBottom="10dp"
     android:id="@+id/lyt_meal_item"
     android:orientation="vertical">
 
@@ -11,51 +12,48 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <androidx.appcompat.widget.LinearLayoutCompat
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintTop_toTopOf="parent"
+        <ImageView
+            android:id="@+id/image_dish"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:scaleType="centerCrop"
             app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            android:orientation="horizontal">
+            android:src="@drawable/green_circle" />
 
-            <ImageView
-                android:id="@+id/image_dish"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:scaleType="fitXY"
-                android:layout_gravity="center_vertical"
-                android:src="@drawable/green_circle" />
-
-            <TextView
-                android:id="@+id/tv_dish_name"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Poha"
-                android:textSize="16sp"
-                android:fontFamily="@font/dmsans_bold"
-                android:layout_gravity="center"
-                android:layout_marginStart="20dp"
-                android:textColor="@color/black_no_meals" />
-        </androidx.appcompat.widget.LinearLayoutCompat>
+        <TextView
+            android:id="@+id/tv_dish_name"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="Poha"
+            android:textSize="16sp"
+            android:fontFamily="@font/dmsans_bold"
+            android:textColor="@color/black_no_meals"
+            android:layout_marginStart="15dp"
+            android:layout_marginEnd="12dp"
+            app:layout_constraintStart_toEndOf="@id/image_dish"
+            app:layout_constraintEnd_toStartOf="@id/image_right_arrow"
+            app:layout_constraintTop_toTopOf="@id/image_dish"
+            app:layout_constraintBottom_toBottomOf="@id/image_dish" />
 
         <ImageView
             android:id="@+id/image_right_arrow"
             android:layout_width="12dp"
             android:layout_height="12dp"
             android:scaleType="fitXY"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_gravity="center_vertical"
+            app:layout_constraintTop_toTopOf="@id/image_dish"
+            app:layout_constraintBottom_toBottomOf="@id/image_dish"
             android:src="@drawable/right_arrow_icon" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
+
 
     <View
         android:layout_width="match_parent"
         android:background="@color/view_border"
         android:layout_marginTop="10dp"
-        android:layout_height="1dp"></View>
+        android:layout_height="1dp"/>
 
 </LinearLayout>
