move_right_commit_api_implementation

--- a/app/src/main/res/layout/fragment_all_workout.xml
+++ b/app/src/main/res/layout/fragment_all_workout.xml
@@ -10,7 +10,7 @@
     android:id="@+id/search_result_allWorkouts"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:text="Search Result :"
+    android:text="Search Results :"
     android:visibility="gone"
     android:layout_marginStart="20dp"
     android:textSize="18dp"
