--- a/app/src/main/res/layout/close_confirmation_bottomsheet.xml
+++ b/app/src/main/res/layout/close_confirmation_bottomsheet.xml
@@ -24,7 +24,8 @@
         android:id="@+id/tvDescription"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="20dp"
+        android:layout_marginVertical="20dp"
+        android:layout_marginHorizontal="30dp"
         android:fontFamily="@font/dmsans_regular"
         android:layout_gravity="center"
         android:gravity="center"
