--- a/app/src/main/res/layout/activity_faq_new.xml
+++ b/app/src/main/res/layout/activity_faq_new.xml
@@ -18,14 +18,14 @@
             android:id="@+id/icon_back"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/icon_back" />
+            android:src="@drawable/ic_back_articlepage" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="FAQ"
-            android:textSize="18sp"
-            android:fontFamily="@font/dmsans_bold"
+            android:textSize="@dimen/textsize_large20sp"
+            android:fontFamily="@font/merriweather_bold"
             android:textColor="@color/txt_color_mind"
             android:layout_marginStart="4dp" />
     </LinearLayout>
@@ -37,6 +37,7 @@
         android:textColor="@color/txt_color_journal_date"
         android:fontFamily="@font/dmsans_bold"
         android:textSize="22sp"
+        android:visibility="gone"
         android:layout_marginStart="4dp" />
 
     <TextView
@@ -45,7 +46,7 @@
         android:text="Common Questions"
         android:textColor="@color/txt_color_journal_date"
         android:fontFamily="@font/dmsans_bold"
-        android:textSize="16sp"
+        android:textSize="18sp"
         android:layout_marginTop="8dp"
         android:layout_marginStart="4dp"/>
 
