Following issues resolved on 29 Oct 2025 1. RAD-5338: [Android][QA][Profile] Heading font incorrect in Profile screen 2. RAD-5340: [Android][QA][Profile] Incorrect toast notification on save 3. RAD-5341: [Android][QA][Profile] OTP popup close button color incorrect 4. RAD-5342: [Android][QA][Profile] OTP popup close button position incorrect 5. RAD-5343: [Android][QA][Profile] OTP popup spacing missing between copies 6. RAD-5344: [Android][QA][Profile] Incorrect toast for wrong OTP 7. RAD-5352: [Android][QA][Profile] Save button not fixed at bottom of screen 8. RAD-5359: [Android][QA][Profile] Toast message after saving profile not as per design 9. RAD-5357: [Android][QA][Profile] Delete key removes only one OTP digit at a time 10. RAD-5355: [Android][QA][Profile] Incorrect toast message “OTP Verified : OTP” displayed after submitting after entering any OTP 11. RAD-5355: [Android][QA][Profile] Incorrect toast message “OTP Verified : OTP” displayed after submitting after entering any OTP 12. RAD-5354: [Android][QA][Profile] Incorrect text casing for “OTP” label in OTP popup 13. RAD-5345: [Android][QA][Profile] Blank toast displayed after tapping Resend OTP 14. RAD-5042: [Android][QA][Login Screen] "You're Logged in with a different account" popup using old design 15. RAD-5353: [Android][QA][Profile] Missing “Retry too early” message on multiple OTP resend attempts 16. RAD-5348: [Android][QA][Profile] OTP popup not opening and blank toast displayed after sending OTP once

--- a/app/src/main/res/layout/bottomsheet_delete_setting.xml
+++ b/app/src/main/res/layout/bottomsheet_delete_setting.xml
@@ -20,7 +20,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="-16dp"
-        android:fontFamily="@font/dmsans_bold"
+        android:layout_marginHorizontal="24dp"
+        android:fontFamily="@font/merriweather_bold"
         android:layout_gravity="center_horizontal"
         android:text="Delete Tag?"
         android:textColor="@color/black"
