--- a/app/src/main/res/layout/dialog_otp_verification.xml
+++ b/app/src/main/res/layout/dialog_otp_verification.xml
@@ -7,6 +7,9 @@
     android:background="@drawable/roundedcornershape"
     android:gravity="center">
 
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
     <!-- Step Circle -->
     <TextView
         android:id="@+id/tvCountdown"
@@ -17,15 +20,18 @@
         android:gravity="center"
         android:textColor="@android:color/white"
         android:textSize="18sp"
-        android:layout_marginBottom="12dp" />
+        android:layout_marginBottom="12dp"
+        android:layout_centerInParent="true"/>
 
     <!-- Close Button -->
     <ImageView
         android:id="@+id/iv_close"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/close_journal"
-        android:layout_gravity="end" />
+        android:src="@drawable/close_breathwork"
+        android:layout_alignParentEnd="true" />
+
+    </RelativeLayout>
 
     <!-- Heading -->
     <TextView
@@ -42,14 +48,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Please enter the six digit code sent to"
-        android:layout_marginTop="4dp" />
+        android:layout_marginTop="16dp" />
 
     <!-- Phone Number and Change -->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:layout_marginTop="6dp">
+        android:layout_marginTop="16dp">
 
         <TextView
             android:id="@+id/tv_phone"
@@ -111,7 +117,7 @@
         android:id="@+id/tv_result"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="(otp sent)"
+        android:text="(OTP sent)"
         android:textSize="10sp"
         android:layout_margin="8dp" />
 
@@ -141,5 +147,5 @@
         android:textSize="16sp"
         android:fontFamily="@font/dmsans_bold"
         android:textColor="@color/black"
-        android:backgroundTint="@color/color_bg_button_affirmed" />
+        android:backgroundTint="@color/white" />
 </LinearLayout>
